# webrender

./: README.md  angular.json  package-lock.json  package.json  tsconfig.json
projects/rust/: README.md  ng-package.json  package.json
projects/rust/src/: public-api.ts
projects/rust/src/lib/: rust.component.ts  rust.service.ts
render_engine/src/: lib.rs
render_engine/src/engine/: globals.rs  mod.rs  run.rs
render_engine/src/engine/helpers/: aligned_array.rs  mod.rs
render_engine/src/engine/transformations/: getters.rs  mod.rs
render_engine/src/models/: mod.rs
render_engine/src/renderer/: render.rs
render_engine/src/renderer/post_processing/: mod.rs
render_engine/src/scene/: mod.rs
render_engine/src/shaders/: shader.wgsl
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/engine/: camera.rs  control_flow.rs  event_handler.rs  globals.rs  mod.rs  run.rs
rust/src/engine/click_detection/: mod.rs
rust/src/engine/helpers/: collisions.rs  mod.rs  staging.rs
rust/src/models/: mod.rs
rust/src/renderer/: gizmo.rs  mod.rs  render.rs  render_obj.rs  texture.rs  uniforms.rs  utils.rs  vertex.rs
rust/src/scene/: camera.rs  mod.rs  sun.rs
rust/src/shaders/: shader.wgsl
src/: index.html
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
src/app/canvas/: canvas-manager.service.ts  canvas.component.html  canvas.component.scss  canvas.component.ts
src/app/canvas/engine/: gamy_game.d.ts  gamy_game.js  gamy_game_bg.js  gamy_game_bg.wasm.d.ts  package.json
src/app/directives/: file-drop.directive.ts
(+14 files in other folders)
