[package]
name = "gamy_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
nalgebra = "*"
wgpu = { version = "22", features = ["webgpu", "webgl"] }
cfg-if = "1"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
log = "*"
web-time = "*"
bytemuck = "*"
fern = "*"
